--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+    <!--links-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,65 +27,75 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!--putting in the time and date to the header-->
       <p id="currentDay" class="lead"></p>
       <p id="currentTime" class="lead"></p>
     </header>
     <div class="container">
-      <!--Time Blocks-->
+      <!--Time 9:00am-->
         <div class="row">
           <div class="col-1 hour">9:00am</div>
           <textarea class="col-10 description" id="9"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 10:00am-->
         <div class="row">
           <div class="col-1 hour" id="10">10:00am</div>
           <textarea class="col-10 description" id="10"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 11:00am-->
         <div class="row">
           <div class="col-1 hour" id="11">11:00am</div>
           <textarea class="col-10 description"id="11"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 12:00pm-->
         <div class="row">
           <div class="col-1 hour" id="12">12:00pm</div>
           <textarea class="col-10 description"id="12"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 1:00pm-->
         <div class="row">
           <div class="col-1 hour" id="13">1:00pm</div>
           <textarea class="col-10 description"id="13"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 2:00pm-->
         <div class="row">
           <div class="col-1 hour" id="14">2:00pm</div>
           <textarea class="col-10 description"id="14"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 3:00pm-->
         <div class="row">
           <div class="col-1 hour" id="15">3:00pm</div>
           <textarea class="col-10 description"id="15"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 4:00pm-->
         <div class="row">
           <div class="col-1 hour" id="16">4:00pm</div>
           <textarea class="col-10 description"id="16"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
         <hr>
+        <!--Time 5:00pm-->
         <div class="row">
           <div class="col-1 hour" id="17">5:00pm</div>
           <textarea class="col-10 description" id="17"></textarea>
           <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
         </div>
     </div>
+    <!--script src's-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="WorkDay.js"></script>
